--- a/CODE_ALONG/styles/base.css
+++ b/CODE_ALONG/styles/base.css
@@ -25,7 +25,7 @@ header img {
     display: block;
     width: 100%;
     height: auto; /*this Auto is making and bringing all content to the top alignment*/
-    padding-bottom: 10px;
+    padding-bottom: 3px;
 }
 
 header span {
@@ -34,7 +34,7 @@ header span {
 }
 
 
-
+/* *************HAMBURGER************* */
 .hamburger {
 background: none;
 border: none;
@@ -52,4 +52,75 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 .hamburger.show::after { /*walay space in between*/
     content: "\00D7";
     
+}
+
+
+
+/* *************NAVIGATION************* */
+.navigation {
+display: none;
+}
+
+.navigation.show {
+    display: block;
+}
+
+.navigation ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navigation a {
+    display: block;
+    padding: .8rem 10px;
+    color: #3D405B;
+    text-decoration: none;
+    border-bottom: solid 1px #ddd;
+}
+
+.navigation li.current {
+    background-color: #eee;
+}
+
+.navigation a:hover {
+    background-color: #E07A5F;
+}
+
+h1 {
+    margin-left: 10px;
+}
+
+
+
+/* ************FOOTER************ */
+footer {
+    background-color: #eee;
+    padding: 1rem 10px;
+    text-align: center;
+}
+
+.social {
+    display: flex;
+    justify-content: center;
+    column-gap: 8px;
+}
+
+.social a{
+    display: flex;
+    justify-content: center; /*justify-content is to CENTER VERTICALLY */
+    align-items: center; /*justify-content is to CENTER HORIZONTALLY */
+    width: 44px;
+    height: 44px;
+    border: black solid 1px;
+    border-radius: 22px;
+}
+
+.social img {
+    width: 22px;
+    height: 22px;
+}
+
+.social a:hover{
+    background-color: #ddd;
 }
