--- a/CODE_ALONG/styles/larger.css
+++ b/CODE_ALONG/styles/larger.css
@@ -15,5 +15,26 @@ header {
     .hamburger {
         display: none;
     }
+
+    
+.navigation{
+    display: block;
+    border-bottom: solid 1px black;
+}
+
+.navigation ul {
+    display: flex;    
+}
+
+.navigation a{
+    border: none;
+}
+
+
+
+
+
+
+
 }
     
