--- a/styles/base.css
+++ b/styles/base.css
@@ -269,6 +269,7 @@ color: var(--background-color);
 background-color: var(--secondary); 
 color: var(--background-color);
 border: 2px solid var(--accent2);
+margin-left: -10px;
 font-weight: bold;
 }
 
@@ -276,6 +277,7 @@ font-weight: bold;
 background-color: var(--primary-color); 
 color: var(--background-color);
 border: 2px solid var(--accent2);
+margin-left: -10px;
 font-weight: bold;
 }
 
