--- a/styles/base.css
+++ b/styles/base.css
@@ -122,12 +122,6 @@ margin-left: 10px;
 font-size: 1rem;
 text-align: left;
 padding-top: 10px;
-
-}
-
-.personal {
-display: grid;
-grid-template-columns: 1fr;
 }
 
 
@@ -137,16 +131,16 @@ grid-template-columns: 1fr;
 display: grid;
 grid-template-columns:  1fr;
 gap: 20px;
-
 }
 
 .personal h2 {
-font-size: 2rem;
-margin-top: 0;
-align-items: center;
-text-align: center;
+    font-size: 2rem;
+    margin-top: 0;
+    align-items: center;
+    text-align: center;
 }
 
+ 
 .about-me{
 background:var(--accent2);
 padding-right: 0;
@@ -165,6 +159,7 @@ padding-top: 10px;
 .about-me p {
 font-size: 1.2rem;
 line-height: 1.6;
+height: auto;
 color: var(--background-color);
 padding: 10px;
 text-align: justify;
@@ -188,25 +183,19 @@ padding-bottom: 10px;
 }
 
 .student-photo img {
-width: 220px;
-height: auto;
-display: block;
-margin: 0 auto;
-align-items: center;
-padding-bottom: 10px;
+    width: 220px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    align-items: center;
+    padding-bottom: 15px;
 }
 
 
 
-/* web certificate */
-.course-list {
-background: var(--background-color);
-padding: 10px;
 
-} 
 
-.course-list h2 {
-
+.courses h2 {
 font-size: 2rem;
 background: var(--primary-color);
 color: var(--background-color);
@@ -216,62 +205,116 @@ padding-top: 10px;
 padding-bottom: 10px;
 }
 
-.course  {
-align-items: center;
-margin-left: 0;
-margin-right: 0;
 
+.course-head ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  
+  justify-content: center;  
+  gap: 30px;
+  list-style-type: none;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: var(--primary-color);
+  padding-right: 20px;
+  margin: 0;
+  padding-bottom: 20px;
 }
 
+.course-head li {
+    background: var(--accent2);
+    padding: 10px;
+    border: solid 2px var(--secondary);
+    text-align: center;
+    margin-left: -10px;    
+}
+ 
+
+.category li.active {
+    background: var(--primary-color);
+    color: var(--background-color);
+    font-weight: bold;
+    border: 2px solid var(--secondary);
+}
+
+
+
 .course-list ul {
-display: grid;
-grid-template-columns:  1fr;  
-justify-content: center;  
-gap: 30px;
-list-style-type: none;
-font-size: 1.2rem;
-line-height: 1.6;
-color: var(--background-color);
-padding-right: 20px;
-margin: 0;
+  display: grid;
+  grid-template-columns: 1fr;  
+  justify-content: center;  
+  gap: 30px;
+  list-style-type: none;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: var(--primary-color);
+  padding-right: 20px;
+  margin: 0;
+  padding-bottom: 20px;
 }
 
 .course-list li {
-background: var(--accent2);
-padding: 10px;
-border: solid 2px var(--secondary);
-text-align: center;
-margin-left: -10px;
-color: var(--background-color);
-
+    background: var(--accent2);
+    padding: 10px;
+    border: solid 2px var(--secondary);
+    text-align: center;
+    margin-left: -10px;    
 }
 
-.course-list #all:hover {
+
+
+
+.completed {
+  background-color: #c8f7c5; 
+  position: relative;
+}
+
+.completed::after {
+  content: "✔";
+  color: var(--background-color);
+  font-weight: bold;
+  position: absolute;
+  right: 15px;
+}
+
+.hidden {
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+.course-head #all:hover {
 background: var(--primary-color);
 cursor: pointer;
 color: var(--background-color);
 }
 
-.course-list #cse:hover {
+.course-head #cse:hover {
 background: var(--primary-color);
 cursor: pointer;
 color: var(--background-color);
 }
 
-.course-list #wdd:hover {
+.course-head #wdd:hover {
 background: var(--primary-color);
 cursor: pointer;
 color: var(--background-color);
 }
 
 
-.course-list li.active {
-background-color: var(--secondary); 
-color: var(--background-color);
-border: 2px solid var(--accent2);
-margin-left: -10px;
-font-weight: bold;
+
+.category li.selected {
+  background-color: var(--secondary);
+  color: var(--background-color);
+  border: 2px solid var(--accent2);
+  font-weight: bold;
 }
+
 
 .course-list li.WDD {
 background-color: var(--primary-color); 
