--- a/chamber/styles/chamber_base.css
+++ b/chamber/styles/chamber_base.css
@@ -264,10 +264,14 @@ font-weight: bold;
 
 
 /* ************FOOTER************ */
-footer {
-background-color: var(--background-color);
-padding: 1rem 10px;
+.footer {
+display: grid;
+grid-template-columns: 1fr;
+align-items: center;
+justify-content: center;
 text-align: center;
+gap: 20px;
+border-top: solid 5px var(--primary-color);
 }
 
 footer p {
@@ -276,6 +280,7 @@ padding-bottom: 10px;
 color: var(--primary-color);
 font-size: 1rem;
 }
+
 
 .social {
 display: flex;
