--- a/chamber/styles/chamber_large.css
+++ b/chamber/styles/chamber_large.css
@@ -78,7 +78,7 @@ margin-right: 10px;
 }
 
 .hero img {
-max-width: 99%;
+max-width: 100%;
 height: auto;
 display: block;
 padding-top: 10px;
@@ -135,5 +135,25 @@ display: grid;
 grid-template-columns: repeat(3, 1fr);
 margin-left: 0;
 }
+
+
+/* HOME PAGE */
+
+.hero-content h2 {
+    font-size: 2.5rem;
+    margin-top: 20px;
+    color: var(--primary-color);
+}
+
+
+
+.hero-content {
+   width: 640px;
+  }
+
+  .company-container h2 {
+    margin-top: 50%;
+}
+
 
 }
