--- a/styles/large.css
+++ b/styles/large.css
@@ -395,5 +395,21 @@ font-size: larger;
   margin-left: 0;
 }
 
+
+
+dialog {
+  border: 1px solid #333;
+  padding: 20px;
+  border-radius: 5px;
+  width: 400px;
+  max-width: 90%;
+  background-color: #fff;
+}
+
+dialog::backdrop {
+  background: rgba(0,0,0,0.5);
+}
+
+
 }
  
