--- a/chamber/styles/chamber_base.css
+++ b/chamber/styles/chamber_base.css
@@ -740,3 +740,12 @@ input, select, textarea {
   from { opacity: 0; transform: scale(0.95); }
   to   { opacity: 1; transform: scale(1); }
 }
+
+
+
+/* THANKS HTML */
+#results p{
+  color: var(--primary-color);
+  margin-left: 15px;
+  font-size: 1.2rem;
+}
