--- a/chamber/styles/chamber_large.css
+++ b/chamber/styles/chamber_large.css
@@ -109,7 +109,7 @@ font-size: larger;
 .join-form {
 display: grid;
 grid-template-columns: 1fr 1fr;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
   padding: 20px;
   border-radius: 8px;
 }
@@ -123,6 +123,7 @@ form .form-label {
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
+  padding-right: 30px;
 }
 
 form .form-label label {
@@ -136,12 +137,12 @@ input, select, textarea {
   padding: 0.5rem;
   margin-top: 0.2rem;
   border-radius: 5px;
-  border: 2px solid #ccc;
+  border: 2px solid var(--primary-color);
   font-size: 1rem;
   margin-bottom: 1rem;
   box-sizing: border-box;
   box-shadow: inset 3px 0 0 0 var(--primary-color);
-  border-left: 2px solid var(--background-color);
+  border-left: 3px solid var(--background-color);
 }
 
 /* Submit button */
@@ -216,7 +217,7 @@ input, select, textarea {
 }
 
 .modal-content {
-  background-color: #fff;
+  background-color: var(--background-color);
   margin: 10% auto;
   padding: 2rem;
   border-radius: 10px;
@@ -233,9 +234,6 @@ input, select, textarea {
   font-weight: bold;
   cursor: pointer;
 }
-
-
-
 
 }
 
