--- a/chamber/styles/chamber_base.css
+++ b/chamber/styles/chamber_base.css
@@ -644,13 +644,12 @@ border-radius: 10px;
 .card a:hover {
 background-color: var(--hover);
 cursor: pointer; ;
-
 }
-
+/* 
 .card {
 position: relative;
 overflow: hidden;
-}
+} */
 
 .flower-rain {
 position: absolute;
