--- a/chamber/styles/chamber_base.css
+++ b/chamber/styles/chamber_base.css
@@ -827,3 +827,115 @@ transform: translateY(100vh) rotate(360deg);
 opacity: 0;
 }
 }
+
+/* DISCOVER PAGE */
+#showHere {
+    display: grid;
+   }
+
+
+.place {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0;
+    border: 25px solid var(--accent2);
+    grid-template-areas:
+    
+        "title"
+        "address"
+        "description"
+        "picture"
+        "learn-more";
+        
+
+}
+
+.place h2 {
+    grid-area: title;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 5px;
+    text-decoration: underline;
+}
+
+.place img {
+    width: 100%;        /* fill the column width */
+    height: 250px;      /* fixed height */
+    object-fit: cover;  /* crop the image to fill the box */
+    margin: 0;
+    padding: 10px;
+}
+
+
+
+
+.place p:nth-of-type(1) {
+    grid-area: address;
+    color: var(--primary-color);
+    text-align: center;
+     margin-left: 20px;
+     margin-right: 20px;
+}
+
+.place p:nth-of-type(2) {
+    grid-area: description;
+    color: var(--primary-color);
+    text-align: center;
+    max-width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
+      
+}
+
+.place p {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 8px; /* space between label and text */
+    align-items: start;
+}
+
+.place p .label {
+    font-weight: bold;
+    white-space: nowrap; /* prevents Address: from breaking */
+}
+
+.place p {
+    margin: 5px 0;
+}
+
+.place p .label {
+    font-weight: bold;
+    white-space: nowrap; /* prevents Address: from breaking */
+}
+
+.place button {
+    grid-area: learn-more; 
+    background-color: transparent; /*with transparent the color inhiret the parent*/
+    border: none;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-decoration: underline;  
+}
+
+.place button:hover {
+    color: var(--primary-color);
+    cursor: pointer;    
+}
+
+/* MODAL BUTTON */
+#mydialog {
+    position: relative;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+}
+
+#mydialog button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    background-color: var(--primary-color);
+    color: var(--background-color);
+}
