--- a/chamber/styles/chamber_base.css
+++ b/chamber/styles/chamber_base.css
@@ -843,8 +843,8 @@ opacity: 0;
     
         "title"
         "address"
-        "description"
         "picture"
+        "description"
         "learn-more";
         
 
@@ -852,19 +852,19 @@ opacity: 0;
 
 .place h2 {
     grid-area: title;
-    text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    text-align: left;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 5px;
-    text-decoration: underline;
+    
 }
 
 .place img {
-    width: 100%;        /* fill the column width */
+    width: 95%;        /* fill the column width */
     height: 250px;      /* fixed height */
-    object-fit: cover;  /* crop the image to fill the box */
-    margin: 0;
+    margin: 0 auto;
     padding: 10px;
+    
 }
 
 
@@ -873,18 +873,20 @@ opacity: 0;
 .place p:nth-of-type(1) {
     grid-area: address;
     color: var(--primary-color);
-    text-align: center;
-     margin-left: 20px;
-     margin-right: 20px;
+    text-align: justify;
+    hyphens: auto;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .place p:nth-of-type(2) {
     grid-area: description;
     color: var(--primary-color);
-    text-align: center;
+    text-align: justify;
+    hyphens: auto;
     max-width: 100%;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
       
 }
 
@@ -921,21 +923,4 @@ opacity: 0;
 .place button:hover {
     color: var(--primary-color);
     cursor: pointer;    
-}
-
-/* MODAL BUTTON */
-#mydialog {
-    position: relative;
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 500px;
-}
-
-#mydialog button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    background-color: var(--primary-color);
-    color: var(--background-color);
 }
